--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,12 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="sign_in_title">Sign in to DrinkMaster</string>
+    <string name="sign_in_subtitle">We will not publish anything, anywhere</string>
+
+    <string name="facebook_app_id">279870429040740</string>
+    <string name="fb_login_protocol_scheme">fb279870429040740</string>
+    <string name="txtLoginFailed">Login failed. Check credentials or create a new profile.</string>
+    <string name="txtSignUpFailedUserExists">Something went wrong. User might already exist.</string>
+    <string name="txtWarningStrongerPsw">Password is not strong enough. Try again.</string>
 </resources>
